--- a/requirements.txt
+++ b/requirements.txt
@@ -88,3 +88,6 @@ uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
 zstandard==0.25.0
+python-jose[cryptography]==3.3.0
+passlib[argon2]==1.7.4
+argon2-cffi==23.1.0
