--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.11.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==25.1.0
 attrs==25.4.0
+bcrypt==5.0.0
 blinker==1.9.0
-bson==0.5.10
+
 cachetools==6.2.2
 certifi==2025.11.12
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+cryptography==46.0.3
 distro==1.9.0
 dnspython==2.8.0
+ecdsa==0.19.1
 fastapi==0.119.1
 filelock==3.20.0
 fsspec==2025.10.0
@@ -29,8 +35,13 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-langchain-core==0.3.80
-langchain-openai==0.2.14
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-openai>=0.2.0
+langgraph==1.0.3
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.2.9
 langsmith==0.4.44
 MarkupSafe==3.0.3
 mpmath==1.3.0
@@ -39,12 +50,16 @@ networkx==3.5
 numpy==2.3.5
 openai==1.109.1
 orjson==3.11.4
+ormsgpack==1.12.0
 packaging==25.0
 pandas==2.3.3
+passlib==1.7.4
 pillow==12.0.0
 plotly==6.5.0
 protobuf==6.33.1
 pyarrow==21.0.0
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.12.4
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
@@ -52,6 +67,7 @@ pydeck==0.9.1
 pymongo==4.15.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-jose==3.3.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
@@ -60,6 +76,7 @@ regex==2025.11.3
 requests==2.32.5
 requests-toolbelt==1.0.0
 rpds-py==0.29.0
+rsa==4.9.1
 safetensors==0.7.0
 scikit-learn==1.7.2
 scipy==1.16.3
@@ -87,7 +104,5 @@ uvicorn==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
+xxhash==3.6.0
 zstandard==0.25.0
-python-jose[cryptography]==3.3.0
-passlib[argon2]==1.7.4
-argon2-cffi==23.1.0
