--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ jsonschema-specifications==2025.9.1
 langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-openai>=0.2.0
+cohere>=5.0.0
 langgraph==1.0.3
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
